[Mac] Touch Bar Browser Tests

Add browser tests to check if the touch bar gets
updated.

Bug: 764295
Change-Id: I9c579319050360e6bbc440137fd3e452f5142c6c
Reviewed-on: https://chromium-review.googlesource.com/688803
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505733}
Former-commit-id: a1487ab0a80de7bcbe522fea1102576a58aa2f14