chrome/browser/ui/cocoa/browser_window_touch_bar.h
@@ -32,4 +32,19 @@ class Browser;
 
 @end
 
+// Private methods exposed for testing.
+@interface BrowserWindowTouchBar (ExposedForTesting)
+
+// Methods to update controls on the touch bar. Called when creating the
+// touch bar or the page load state has been updated. Exposed for
+// testing.
+- (void)updateReloadStopButton;
+- (void)updateBackForwardControl;
+- (void)updateStarredButton;
+
+// Returns the reload/stop button on the touch bar.
+- (NSButton*)reloadStopButton;
+
+@end
+
 #endif  // CHROME_BROWSER_UI_COCOA_BROWSER_WINDOW_TOUCH_BAR_H_
